fix(ui): gap between TOC items is inconsistent
H2 and the first sub-level H3 in the TOC are too close

--- a/_sass/pages/_post.scss
+++ b/_sass/pages/_post.scss
@@ -275,10 +275,6 @@ header {
         margin: 0.4rem 0;
       }
 
-      &:first-child {
-        margin-top: 0;
-      }
-
       a {
         padding: 0.2rem 0 0.2rem 1.25rem;
       }
